# solar-esg-pipeline

./: .gitignore  README.md  config.yaml  environment.local.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.dev_notes/: sprint_1_summary.md
.github/workflows/: main.yml
data/raw/: basel_sentinel2_cropped.tif
notebooks/: 01_data_exploration.ipynb
solar_esg_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: align_and_mask.py  app.py  config_schema.py  data_ingestion.py  dataset.py  download_sentinel.py  inference.py  train.py
tests/: conftest.py  test_config.py  test_dataset.py  test_model.py
